--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Test</title>
+  <title>Minimal AR Test</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/dist/mindar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/dist/aframe-mindar.js"></script>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-    }
-    a-scene {
-      height: 100vh;
-    }
-  </style>
 </head>
 <body>
-  <a-scene mindar-image="imageTargetSrc: https://raw.githubusercontent.com/MasterLWA/MindAR-test/refs/heads/main/Assets/Target/targets.mind; autoStart: true;" embedded>
-    <a-camera></a-camera>
+  <a-scene mindar-image="imageTargetSrc: /path/to/targets.mind; autoStart: true;">
+    <a-camera position="0 0 0"></a-camera>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-box position="0 0.1 0" color="red"></a-box>
+    </a-entity>
   </a-scene>
 </body>
 </html>
+
