--- a/index.html
+++ b/index.html
@@ -3,17 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minimal AR Test</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/dist/aframe-mindar.js"></script>
+  <title>MindAR.js Debugging</title>
+  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/dist/mindar-three.prod.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
+  <style>
+    body { margin: 0; overflow: hidden; }
+  </style>
 </head>
 <body>
-  <a-scene mindar-image="imageTargetSrc: /path/to/targets.mind; autoStart: true;">
-    <a-camera position="0 0 0"></a-camera>
-    <a-entity mindar-image-target="targetIndex: 0">
-      <a-box position="0 0.1 0" color="red"></a-box>
-    </a-entity>
-  </a-scene>
+  <script>
+    const mindarThree = new window.MINDAR.IMAGE.MindARThree({
+      container: document.body,
+      imageTargetSrc: "https://raw.githubusercontent.com/MasterLWA/MindAR-test/main/Assets/Target/targets.mind",
+    });
+
+    const { renderer, scene, camera } = mindarThree;
+
+    // Debugging: Ensure the camera is accessed
+    mindarThree.start().then(() => {
+      console.log("MindAR started successfully!");
+    }).catch((error) => {
+      console.error("Error starting MindAR:", error);
+    });
+
+    const anchor = mindarThree.addAnchor(0);
+    const loader = new THREE.GLTFLoader();
+
+    loader.load(
+      "https://raw.githubusercontent.com/MasterLWA/MindAR-test/main/Assets/Model/ELE.gltf",
+      (gltf) => {
+        const model = gltf.scene;
+        model.scale.set(0.5, 0.5, 0.5);
+        anchor.group.add(model);
+        console.log("3D model loaded successfully!");
+      },
+      undefined,
+      (error) => console.error("Error loading 3D model:", error)
+    );
+
+    const animate = () => {
+      requestAnimationFrame(animate);
+      renderer.render(scene, camera);
+    };
+    animate();
+  </script>
 </body>
 </html>
-
