--- a/index.html
+++ b/index.html
@@ -3,50 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindAR.js Debugging</title>
-  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/dist/mindar-three.prod.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
+  <title>Needle.js WebAR Example</title>
+  
+  <!-- Include Needle.js Library -->
+  <script src="https://cdn.jsdelivr.net/gh/needle-web/needle/dist/needle.js"></script>
+  
   <style>
-    body { margin: 0; overflow: hidden; }
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    a-scene {
+      height: 100vh;
+    }
   </style>
 </head>
 <body>
+
+  <!-- AR Scene -->
+  <div id="ar-scene"></div>
+
   <script>
-    const mindarThree = new window.MINDAR.IMAGE.MindARThree({
-      container: document.body,
-      imageTargetSrc: "https://raw.githubusercontent.com/MasterLWA/MindAR-test/main/Assets/Target/targets.mind",
+    // Initialize Needle.js AR Scene
+    const scene = new Needle.Scene({
+      container: '#ar-scene',  // This is where the AR scene will be rendered
+      camera: { position: { x: 0, y: 0, z: 0 } }, // Camera setup
     });
 
-    const { renderer, scene, camera } = mindarThree;
-
-    // Debugging: Ensure the camera is accessed
-    mindarThree.start().then(() => {
-      console.log("MindAR started successfully!");
-    }).catch((error) => {
-      console.error("Error starting MindAR:", error);
+    // Load the image target
+    scene.addTarget({
+      type: 'image',
+      imageUrl: './Assets/Image/ele.jpeg', // Image target URL
+      scale: 1.0, // You can adjust the scale
+      onDetected: () => {
+        console.log('Image target detected!');
+      }
     });
 
-    const anchor = mindarThree.addAnchor(0);
-    const loader = new THREE.GLTFLoader();
+    // Add a 3D model to appear on the image target
+    scene.addModel({
+      targetId: 'image-target-id', // Image target ID from the addTarget function
+      modelUrl: 'https://raw.githubusercontent.com/MasterLWA/MindAR-test/refs/heads/main/Assets/Model/ELE.gltf', // 3D model URL
+      scale: { x: 0.5, y: 0.5, z: 0.5 }, // Scale the model
+      position: { x: 0, y: 0, z: 0 }, // Adjust position of model relative to target
+    });
 
-    loader.load(
-      "https://raw.githubusercontent.com/MasterLWA/MindAR-test/main/Assets/Model/ELE.gltf",
-      (gltf) => {
-        const model = gltf.scene;
-        model.scale.set(0.5, 0.5, 0.5);
-        anchor.group.add(model);
-        console.log("3D model loaded successfully!");
-      },
-      undefined,
-      (error) => console.error("Error loading 3D model:", error)
-    );
-
-    const animate = () => {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-    };
-    animate();
+    // Start the AR experience
+    scene.start();
   </script>
+
 </body>
 </html>
